trunk/Archive2/43/e955fb34c1fb3c/output
main.cpp: In function 'int main()':
main.cpp:7:29: error: type/value mismatch at argument 1 in template parameter list for 'template<bool B> struct foo'
     foo<std::is_const<int>()> x;
                             ^
main.cpp:7:29: error:   expected a constant of type 'bool', got 'std::is_const<int>()'
main.cpp:7:32: error: invalid type in declaration before ';' token
     foo<std::is_const<int>()> x;
                                ^
main.cpp:7:31: warning: unused variable 'x' [-Wunused-variable]
     foo<std::is_const<int>()> x;
                               ^
